--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on: [push, pull_request]
 env:
   # Run tasks in the current thread, no need for workers in CI mode
   CELERY_TASK_ALWAYS_EAGER: True
+  POSTGRES_PASSWORD: scancodeio
 
 jobs:
   build:
@@ -19,12 +20,14 @@ jobs:
       postgres:
         image: postgres:10
         env:
-          POSTGRES_PASSWORD: scancodeio
+          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
           options: >-
             --health-cmd pg_isready
             --health-interval 10s
             --health-timeout 5s
             --health-retries 5
+          ports:
+            - 5432:5432
 
     steps:
     - uses: actions/checkout@v2
