Debug postgres setup
Signed-off-by: Thomas Druez <tdruez@nexb.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 env:
   # Run tasks in the current thread, no need for workers in CI mode
   CELERY_TASK_ALWAYS_EAGER: True
-  DB_HOST: localhost
+  DB_HOST: postgres
   DB_USERNAME: postgres
   DB_PASSWORD: postgres
 #  POSTGRES_DB: scancodeio
@@ -24,14 +24,16 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: postgres
         ports:
-          - 5432:5432
+          - 5432:tcp
         # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
 
     steps:
       - name: PostgreSQL
-        run: createdb test
+        run: |
+          psql -c "\l"
+          createdb test
         env:
           POSTGRES_HOST: postgres
           POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
